# owasp-scanner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: issues-2026-05-04-mcp-reliability-and-context.md  requirements-nextjs.md  requirements-test-quality.md  requirements-v2.md  requirements-v3-vision.md
docs/resolved/: issues-2026-05-04-mcp-reliability-and-context.md
src/owasp_scanner/: __init__.py  server.py
src/owasp_scanner/core/: config.py  config_scanner.py  database.py  dataflow.py  errors.py  llm_scanner.py  nextjs.py  pip_audit.py  prompts.py  reporter.py  sarif.py  scanner.py  test_analyzer.py  test_pairing.py
src/owasp_scanner/data/: owasp_top10_2025.json
src/owasp_scanner/rules/: loader.py  nextjs_patterns.py  patterns.py  severity.py  test_quality_patterns.py
tests/: conftest.py  test_config_scanner.py  test_database.py  test_dataflow.py  test_llm_scanner.py  test_nextjs_classifier.py  test_nextjs_config.py  test_nextjs_integration.py  test_nextjs_rules.py  test_pairing.py  test_pip_audit.py  test_plugins.py  test_quality_integration.py  test_quality_rules.py  test_reporter.py  test_rules.py  test_sarif.py  test_scanner.py  test_server.py  test_severity.py
