[project]
name = "owasp-scanner"
version = "0.1.0"
description = "MCP server for OWASP Top 10 security scanning, vulnerability tracking, and remediation"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
owasp-scanner = "owasp_scanner.server:main"

[project.optional-dependencies]
llm = ["openai>=1.60.0"]
plugins = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pyyaml>=6.0", "openai>=1.60.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owasp_scanner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/owasp_scanner/server.py" = ["E501"]       # OWASP reference strings are long
"src/owasp_scanner/rules/patterns.py" = ["E501"]  # Rule descriptions are long
"src/owasp_scanner/core/database.py" = ["E501"]   # SQL strings are long
"src/owasp_scanner/core/config_scanner.py" = ["E501"]  # Description strings are long
